# auth_capture_proxy

./: .gitignore  .pre-commit-config.yaml  .scrutinizer.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CODEOWNERS.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  azure-pipelines.yml  codemeta.json  cov.xml  patchfile.patch  pyproject.toml  readthedocs.yml  tox.ini
.github/: action-options.json  settings.yml
.github/ISSUE_TEMPLATE/: enhancement.md  performance.md
.github/workflows/: checks.yml  labels.yml  publish.yml  pull-test.yml  push-main.yml
authcaptureproxy/: __init__.py  auth_capture_proxy.py  cli.py  const.py  helper.py  interceptor.py  stackoverflow.py
authcaptureproxy/examples/: __init__.py  amazon_waf.py  modifiers.py  testers.py
docs/: conf.py  index.rst
tests/: __init__.py  test_all_handler.py  test_authcaptureproxy.py  test_cli.py  test_helper.py  test_interceptor.py  test_regression_headers_and_json_parsing.py  test_stackoverflow.py
tests/examples/: __init__.py  test_amazon_waf.py  test_modifiers.py
