[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "authcaptureproxy"
version = "1.3.7"
description = "A Python project to create a proxy to capture authentication information from a webpage. This is useful to capture oauth login details without access to a third-party oauth."
readme = "README.md"
authors = [
    { name = "Alan D. Tse", email = "alandtse@gmail.com" }
]
maintainers = [
    { name = "Alan D. Tse", email = "alandtse@gmail.com" }
]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [""]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.3, <1.0",
    "aiohttp>=3.0.0, <4.0.0",
    "multidict>=6.0.0, <7.0.0",
    "yarl>=1.0.0, <2.0.0",
    "beautifulsoup4>=4.0.0, <5.0.0",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/alandtse/auth_capture_proxy"
Repository = "https://github.com/alandtse/auth_capture_proxy"
Documentation = "https://auth_capture_proxy.readthedocs.io"
"Bug Tracker" = "https://github.com/alandtse/auth_capture_proxy/issues"
Download = "https://pypi.org/project/authcaptureproxy/"

[project.scripts]
auth_capture_proxy = "authcaptureproxy.cli:cli"

[tool.poetry]
# Legacy poetry config kept for compatibility where needed, but most should be in [project] now
# Poetry will implicitly use [project] for most things.
include = ["README.md", "LICENSE.txt", "CHANGELOG.md"]

[tool.poetry.group.dev.dependencies]
bandit = ">=1.7, <2.0"
black = ">=20.8b1"
coverage = { extras = ["toml"], version = "^5" }
flake8 = ">=3.9, <8.0"
flake8-bugbear = ">=20.11, <25.0"
flake8-docstrings = "^1"
pre-commit = ">=3.5.0"
pre-commit-hooks = ">=3.4, <4.0"
pytest = "^7"
pytest-cov = "^2"
sphinx = ">=4"
sphinx-autoapi = ">=1"
sphinx-copybutton = ">=0.3.1"
sphinx-rtd-theme = ">=0.5"
tomlkit = ">=0.7"
mypy = ">=0.790, <1.0"
hypothesis = "^6"
xdoctest = ">=0.15, <1.0"
python-semantic-release = "^9"
coveralls = "^3"
pytest-asyncio = ">=0.14.0, <1"
tox-gh-actions = ">=2.4.0, <3"
tox-poetry = ">=0.3.0, <1"
isort = "^5"

[tool.poetry.extras]
all = []

# Tyrannosaurus settings updated to point to new project table locations where possible
[tool.tyrannosaurus.options]
sort = false
align = true

[tool.tyrannosaurus.sources]
pycompatversions = "project.dependencies"
pytoxversions = "project.dependencies"
pymetaversion = "'3.9'"
metavm = "'ubuntu-latest'"
devdeps = "tool.poetry.group.dev.dependencies"
status = "'Development'"
date = "'2021-02-03'"
copyright = "'Copyright 2021'"
version = "project.version"
release = "project.version"
long_description = "project.description"
authors = ["Alan D. Tse <github:alandtse>"]
contributors = [
    "Alan D. Tse <github:alandtse>",
    "Parker Wahle <github:regulad>",
]
maintainers = "tool.tyrannosaurus.sources.authors"
linelength = "tool.black.line-length"
importorderstyle = "'google'"
docstringstyle = "'google'"

[tool.tyrannosaurus.sources.flake8skip]
all = "'W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293'"
test = "'D100,D101,D102,D103,D104,S101,W503,E203,E225,E301,E302,E501,D107,D200,D205,D400,D403,D409,D410,D411,D212,W391,W293'"

[tool.tyrannosaurus.targets]
pyproject = true
init = true
tox = true
precommit = true
docs = true
recipes = true
license = true
authors = true
github = true
travis = true
dockerfile = true
readme = true
changelog = true
citation = true
codemeta = true
environment = false

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "strict"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.towncrier]
filename = "NEWS.md"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
major_on_zero = true
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry lock && poetry build"

[tool.coverage.paths]
source = ["authcaptureproxy"]

[tool.coverage.run]
source = ["authcaptureproxy"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100

[tool.bandit]

[tool.pycodestyle]
max-line-length = 100
statistics = true

[tool.pydocstyle]

[mypy]
check_untyped_defs = true
strict_optional = true
